--- a/BlazingTrails/BlazingTrails.Client/wwwroot/css/app.css
+++ b/BlazingTrails/BlazingTrails.Client/wwwroot/css/app.css
@@ -19,8 +19,8 @@ a:hover {
 
 .navbar {
     border-bottom: 2px solid var(--brand);
-    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 5%,
-            ➥rgba(255, 255, 255, 0) 100%), url("../images/navbar-bg.jpg") no-repeat ➥center;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 5%, rgba(255, 255, 255, 0) 100%),
+                url("../images/navbar-bg.jpg") no-repeat center;
     background-size: cover;
 }
 
