--- a/BlazingTrails/BlazingTrails.Client/Features/Home/Lifecycle.razor
+++ b/BlazingTrails/BlazingTrails.Client/Features/Home/Lifecycle.razor
@@ -12,7 +12,12 @@
 
   protected override void OnInitialized() => Console.WriteLine("OnInitialized");
 
-  protected override async Task OnInitializedAsync() => Console.WriteLine("OnInitializedAsync");
+  protected override async Task OnInitializedAsync()
+  {
+    Console.WriteLine("OnInitializedAsync - Begin");
+    await Task.Delay(300);
+    Console.WriteLine("OnInitializedAsync - End");
+  }
 
   protected override void OnParametersSet() => Console.WriteLine("OnParametersSet");
 
