--- a/BlazingTrails/BlazingTrails.Client/Features/Home/Lifecycle.razor
+++ b/BlazingTrails/BlazingTrails.Client/Features/Home/Lifecycle.razor
@@ -27,6 +27,8 @@
 
     await Task.Delay(1000);
     _greeting.Add("to");
+    StateHasChanged();
+
 
     await Task.Delay(1000);
     _greeting.Add("Blazor in Action");
